--- a/src/pages/requests-admin/requests-admin.module.css
+++ b/src/pages/requests-admin/requests-admin.module.css
@@ -15,3 +15,20 @@
   margin-top: 10px;
   padding: 2px 5px;
 }
+
+.userPictureContainer {
+  margin-top: 10px;
+}
+.leftUserPicture {
+  background-color: #5ba27d30;
+}
+.rightUserPicture {
+  background-color: #a52a2a30;
+}
+
+.leftUserPicture > img {
+  width: 100%;
+}
+.rightUserPicture > img {
+  width: 100%;
+}
